--- a/src/app/forms/forms.component.scss
+++ b/src/app/forms/forms.component.scss
@@ -5,6 +5,10 @@
 .main-container {
     padding-top: 40px;
 }
+@keyframes modal-in {
+    0% { left: 50%; top: 50%; width: 0px; height: 0px;}
+    100% {top: calc(50% - 100px); left: calc(50% - 200px);width: 400px; height: 200px}
+}
 .modal {
     width: 100%;
     height: 100%;
@@ -14,6 +18,9 @@
     top: 0;
     z-index: 111;
     .modal-body {
+        // animation-name: modal-in;
+        // animation-duration: 200ms;
+        // animation-timing-function: ease-in-out;
         border-radius: 5px;
         padding: 10px;
         box-shadow: 1px 1px 1px 1px #fff;
@@ -23,5 +30,9 @@
         background-color: #fff;
         top: calc(50% - 100px);
         left: calc(50% - 200px);
+        // &:hover{
+        //     width: 450px;
+        //     height:250px;
+        // }
     }
 }
